brand styleguide colors

--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -1,6 +1,7 @@
 // Colors
-$primary: #1cad7e; //forest green
-$accent: #0D47A1; 
+$primary: #006778; //teal
+$accent: #D7A22A; //light gold
+$accent2: #9F792C; //darker gold
 
 $color-heading: #404040;
 
