--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -502,13 +502,13 @@ textarea { overflow: auto; }
 
 body { min-width: 320px; font-size: 100%; font-family: "Open Sans", serif, Helvetica; font-weight: 300; overflow-x: hidden; }
 
-body.home { background-color: #1cad7e; }
+body.home { background-color: #006778; }
 
-a { color: #1cad7e; -webkit-transition: color 200ms; transition: color 200ms; }
+a { color: #006778; -webkit-transition: color 200ms; transition: color 200ms; }
 
-a:hover { color: #18976e; }
+a:hover { color: #00515f; }
 
-a:focus { color: #18976e; outline: none; }
+a:focus { color: #00515f; outline: none; }
 
 /* Typography */
 h1, h2, h3, h4, h5, h6 { font-family: "Open Sans", Verdana, Arial; color: #404040; }
@@ -556,7 +556,7 @@ img.top { margin-top: 0; }
 img.pad-top { padding-top: 1em; }
 
 /* Buttons */
-.btn, .btn-default { display: inline-block; margin-bottom: 0; height: 48px; padding-left: 25px; padding-right: 25px; background-color: #1cad7e; color: white; border: 1px solid #dbdbdb; text-align: center; text-decoration: none; font-family: "Open Sans", Verdana, Arial; font-size: 1em; font-weight: 700; letter-spacing: 1px; border-radius: 3px; white-space: nowrap; cursor: pointer; -webkit-transition: all linear 0.3s; transition: all linear 0.3s; z-index: 1004; }
+.btn, .btn-default { display: inline-block; margin-bottom: 0; height: 48px; padding-left: 25px; padding-right: 25px; background-color: #006778; color: white; border: 1px solid #dbdbdb; text-align: center; text-decoration: none; font-family: "Open Sans", Verdana, Arial; font-size: 1em; font-weight: 700; letter-spacing: 1px; border-radius: 3px; white-space: nowrap; cursor: pointer; -webkit-transition: all linear 0.3s; transition: all linear 0.3s; z-index: 1004; }
 
 .btn:hover, .btn-default:hover { border-color: #c2c2c2; }
 
@@ -564,13 +564,13 @@ img.pad-top { padding-top: 1em; }
 
 .btn.bg-white:hover, .btn-default.bg-white:hover { background-color: #e6e6e6; }
 
-.btn.bg-accent, .btn-default.bg-accent { background-color: #0D47A1; color: white; border-color: white; }
+.btn.bg-accent, .btn-default.bg-accent { background-color: #D7A22A; color: white; border-color: white; }
 
-.btn.bg-accent:hover, .btn-default.bg-accent:hover { border-color: #093272; }
+.btn.bg-accent:hover, .btn-default.bg-accent:hover { border-color: #ad8221; }
 
-.btn.bg-transparent, .btn-default.bg-transparent { background-color: transparent; border-color: white; color: #1cad7e; }
+.btn.bg-transparent, .btn-default.bg-transparent { background-color: transparent; border-color: white; color: #006778; }
 
-.btn.bg-transparent:hover, .btn-default.bg-transparent:hover { border-color: #1cad7e; color: white; }
+.btn.bg-transparent:hover, .btn-default.bg-transparent:hover { border-color: #006778; color: white; }
 
 @media (max-width: 860px) { .btn, .btn-default { padding-left: 45px; padding-right: 45px; } }
 
@@ -601,15 +601,15 @@ img.pad-top { padding-top: 1em; }
 @media (max-width: 768px) { .mobile-center { display: block; max-width: 100%; margin: 0 auto; text-align: center; } }
 
 /* Color classes */
-.text-primary { color: #1cad7e; }
+.text-primary { color: #006778; }
 
-.text-accent { color: #0D47A1; }
+.text-accent { color: #D7A22A; }
 
 .text-white { color: white; }
 
-.bg-primary { background-color: #1cad7e; }
+.bg-primary { background-color: #006778; }
 
-.bg-accent { background-color: #0D47A1; }
+.bg-accent { background-color: #D7A22A; }
 
 .bg-transparent { background-color: transparent; }
 
@@ -662,7 +662,7 @@ nav.main li + li a { margin-left: 20px; }
 /*--------------------------------------------------------------
 # Section: Hero
 --------------------------------------------------------------*/
-.hero { position: relative; padding-bottom: 180px; text-align: left; background: -webkit-linear-gradient(#1cad7e, rgba(28, 173, 126, 0.6)), url("../img/bg-hero.jpg") 0 0 no-repeat; background: linear-gradient(#1cad7e, rgba(28, 173, 126, 0.6)), url("../img/bg-hero.jpg") 0 0 no-repeat; background-size: cover; }
+.hero { position: relative; padding-bottom: 180px; text-align: left; background: -webkit-linear-gradient(#006778, rgba(0, 103, 120, 0.6)), url("../img/bg-hero.jpg") 0 0 no-repeat; background: linear-gradient(#006778, rgba(0, 103, 120, 0.6)), url("../img/bg-hero.jpg") 0 0 no-repeat; background-size: cover; }
 
 .hero .intro { padding-top: 60px; color: white; }
 
@@ -703,12 +703,12 @@ nav.main li + li a { margin-left: 20px; }
 /*--------------------------------------------------------------
 # Section: two
 --------------------------------------------------------------*/
-.two { background-color: #1cad7e; height: 100vh; }
+.two { background-color: #006778; height: 100vh; }
 
 /*--------------------------------------------------------------
 # Section: three
 --------------------------------------------------------------*/
-.three { background-color: #0D47A1; height: 100vh; }
+.three { background-color: #D7A22A; height: 100vh; }
 
 /*--------------------------------------------------------------
 # Section: four
@@ -723,5 +723,5 @@ nav.main li + li a { margin-left: 20px; }
 /*--------------------------------------------------------------
 # Section: six
 --------------------------------------------------------------*/
-.six { background-color: #1cad7e; height: 100vh; }
+.six { background-color: #006778; height: 100vh; }
 /*# sourceMappingURL=style.css.map */
