--- a/assets/scss/_layout.scss
+++ b/assets/scss/_layout.scss
@@ -18,9 +18,6 @@ header.site {
 	    display: block;
 	    text-align: center;
     }
-    /*.logo {
-        width: 115px;
-	}*/
 	span {
 		color: white;
 		font-size: $font-lg;
@@ -84,7 +81,7 @@ nav.main {
 --------------------------------------------------------------*/
 .hero {
 	position: relative;
-	padding-bottom: 180px;
+	height: calc(100vh - 125px);
 	text-align: left;
 	background: linear-gradient($primary, rgba($primary, 0.6)), url('../img/bg-hero.jpg') 0 0 no-repeat;
 	background-size: cover;
