--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -9,6 +9,10 @@ $black: #4c4643;
 $grey: #9B9B9B;
 $border: #dbdbdb;
 
+//college colors
+$fsu-gold: #CEB888;
+$fsu-garnet: #782F40;
+
 // Sizings
 $font-xl: 1.5em;
 $font-lg: 1.25em;
