--- a/assets/scss/_base.scss
+++ b/assets/scss/_base.scss
@@ -134,14 +134,14 @@ img {
     height: 48px;
 	padding-left: 25px;
 	padding-right: 25px;
+	border: none;
 	background-color: $primary;
 	color: white;
-    border: 1px solid $border;
 	text-align: center;
 	text-decoration: none;
 	font-family: $font-heading;
 	font-size: $font-default;
-	font-weight: 700;
+	font-weight: 400;
     letter-spacing: 1px;
     border-radius: 3px;
     white-space: nowrap;
@@ -149,7 +149,7 @@ img {
     transition: all linear 0.3s;
     z-index: 1004;
     &:hover {
-        border-color: darken($border,10%);
+
 	}
     //colors
     &.bg-white {
@@ -160,19 +160,16 @@ img {
 	    }
     }
     &.bg-accent {
-		background-color: $accent;
+		background-color: $accent2;
 		color: white;
-	    border-color: white;
 	    &:hover {
-		     border-color: darken($accent,10%);
+	        background-color: darken($accent2,10%);
 	    }
     }
     &.bg-transparent {
 		background-color: transparent;
-	    border-color: white;
 	    color: $primary;
 	    &:hover {
-		    border-color: $primary;
 		    color: white;
 	    }
     }
@@ -199,14 +196,6 @@ img {
 	margin-right: auto;
 	padding-right: 20px;
 	padding-left: 20px;
-}
-.section {
-	padding: 90px 0;
-	background-color: white;
-	border-bottom: 1px solid $border;
-	@media (max-width: $screen-sm) {
-		padding: 30px 0;
-	}
 }
 
 .absolute {
@@ -242,6 +231,7 @@ img {
 		text-align: center;
 	}
 }
+.clearfix {clear:both;}
 
 /* Color classes */
 .text-primary {color: $primary;}
