--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -671,7 +671,9 @@ nav.main li + li a { margin-left: 20px; }
 /*--------------------------------------------------------------
 # Section: Subnav
 --------------------------------------------------------------*/
-.subnav-wrapper { height: auto; overflow: inherit; background-color: white; overflow: hidden; }
+.subnav-wrapper { height: 65px; overflow: inherit; background-color: white; overflow: hidden; }
+
+@media (max-width: 768px) { .subnav-wrapper { height: auto; } }
 
 .subnav { width: 100%; background-color: white; border-bottom: 1px solid #dbdbdb; }
 
@@ -689,19 +691,17 @@ nav.main li + li a { margin-left: 20px; }
 
 @media (max-width: 768px) { .subnav ul.flex li a { padding-left: 0; padding-right: 0; } }
 
-.subnav.fixed { position: fixed; top: 0; width: 100%; z-index: 99999; box-shadow: 0px 1px 3px 0px rgba(0, 0, 0, 0.2); -webkit-transition: all 0.2s ease-in-out; transition: all 0.2s ease-in-out; }
+.subnav.fixed { position: fixed; top: 0; left: 0; width: 100%; z-index: 99999; box-shadow: 0px 1px 3px 0px rgba(0, 0, 0, 0.2); -webkit-transition: all 0.2s ease-in-out; transition: all 0.2s ease-in-out; }
 
 /*--------------------------------------------------------------
 # Section: Global
 --------------------------------------------------------------*/
-.section { height: 100vh; padding: 0; background-color: white; border-bottom: 1px solid #dbdbdb; }
-
-@media (max-width: 768px) { .section { padding: 30px 0; } }
+section { position: relative; overflow: hidden; padding: 50px; width: 100%; height: 100vh; }
 
 /*--------------------------------------------------------------
 # Section: Ramsey
 --------------------------------------------------------------*/
-.ramsey { position: relative; width: 100%; height: 100%; background: -webkit-linear-gradient(left, #CEB888 0%, #CEB888 50%, #782F40 50%, #782F40 100%); background: linear-gradient(to right, #CEB888 0%, #CEB888 50%, #782F40 50%, #782F40 100%); }
+.ramsey { width: 100%; background: -webkit-linear-gradient(left, #CEB888 0%, #CEB888 50%, #782F40 50%, #782F40 100%); background: linear-gradient(to right, #CEB888 0%, #CEB888 50%, #782F40 50%, #782F40 100%); }
 
 .ramsey .player-container { margin: 0; padding: 0; background-color: white; }
 
