--- a/assets/scss/_layout.scss
+++ b/assets/scss/_layout.scss
@@ -108,10 +108,13 @@ nav.main {
 # Section: Subnav
 --------------------------------------------------------------*/
 .subnav-wrapper {
-    height: auto;
+    height: 65px; //height needed for snappanel
     overflow: inherit;
     background-color: white;
     overflow: hidden;
+    @media (max-width: $screen-sm) {
+        height: auto;
+    }
 }
 .subnav {
 	width: 100%;
@@ -156,6 +159,7 @@ nav.main {
 .subnav.fixed {
 	position: fixed;
     top: 0;
+    left: 0;
     width: 100%;
     z-index: 99999;
     box-shadow: 0px 1px 3px 0px rgba(black, 0.2);
@@ -165,23 +169,19 @@ nav.main {
 /*--------------------------------------------------------------
 # Section: Global
 --------------------------------------------------------------*/
-.section {
+ section {
+    position: relative;
+    overflow: hidden;
+    padding: 50px;
+    width: 100%;
     height: 100vh;
-	padding: 0;
-	background-color: white;
-	border-bottom: 1px solid $border;
-	@media (max-width: $screen-sm) {
-		padding: 30px 0;
-	}
 }
-
 /*--------------------------------------------------------------
 # Section: Ramsey
 --------------------------------------------------------------*/
 .ramsey {
-    position: relative;
+
     width: 100%;
-    height: 100%;
     background: linear-gradient(to right, $fsu-gold 0%, $fsu-gold 50%, $fsu-garnet 50%, $fsu-garnet 100%);
     
     .player-container {
