--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -12,6 +12,17 @@ $border: #dbdbdb;
 //college colors
 $fsu-gold: #CEB888;
 $fsu-garnet: #782F40;
+$ucla-blue: #005C8E;
+$ucla-gold: #AB841E;
+$maryland-red: #F83A39;
+$nd-blue: #00122B;
+$nd-gold: #bf9565;
+$montana: #784f72;
+$ark-red: #561d22;
+$ark-black: #231F20;
+$ca-purple: #5954d9;
+$ca-silver: #939BA1;
+
 
 // Sizings
 $font-xl: 1.5em;
