--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -698,6 +698,8 @@ nav.main li + li a { margin-left: 20px; }
 --------------------------------------------------------------*/
 section { position: relative; overflow: hidden; padding: 0; width: 100%; height: 100vh; }
 
+section .panels { position: absolute; width: 100%; height: 100%; min-height: 100vh; top: 0; left: 0; overflow: auto; }
+
 .player-container { margin: 0; padding: 0; background-color: white; }
 
 .player-bg { position: relative; width: 50%; height: 100vh; margin: 0; padding: 0; opacity: 0.9; }
