--- a/assets/scss/_layout.scss
+++ b/assets/scss/_layout.scss
@@ -174,6 +174,15 @@ nav.main {
     padding: 0;
     width: 100%;
     height: 100vh;
+    .panels {
+	    position: absolute;
+	    width: 100%;
+	    height: 100%;
+        min-height: 100vh;
+	    top: 0;
+	    left: 0;
+	    overflow: auto;
+    }
 }
 .player-container {
     margin: 0;
