--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -698,7 +698,7 @@ nav.main li + li a { margin-left: 20px; }
 --------------------------------------------------------------*/
 section { position: relative; overflow: hidden; padding: 0; width: 100%; height: 100vh; }
 
-section .panels { position: absolute; width: 100%; height: 100%; min-height: 100vh; top: 0; left: 0; overflow: auto; }
+section .panels { position: absolute; width: 100%; height: 100%; min-height: 100vh; top: 0; left: 0; padding: 0 60px; overflow: auto; -webkit-overflow-scrolling: touch; }
 
 .player-container { margin: 0; padding: 0; background-color: white; }
 
@@ -733,38 +733,24 @@ section .panels { position: absolute; width: 100%; height: 100%; min-height: 100
 /*--------------------------------------------------------------
 # Section: Ramsey
 --------------------------------------------------------------*/
-.ramsey { background: -webkit-linear-gradient(left, #CEB888 0%, #CEB888 50%, #782F40 50%, #782F40 100%); background: linear-gradient(to right, #CEB888 0%, #CEB888 50%, #782F40 50%, #782F40 100%); }
-
 /*--------------------------------------------------------------
 # Section: Jack
 --------------------------------------------------------------*/
-.jack { background: -webkit-linear-gradient(left, #005C8E 0%, #005C8E 50%, #AB841E 50%, #AB841E 100%); background: linear-gradient(to right, #005C8E 0%, #005C8E 50%, #AB841E 50%, #AB841E 100%); }
-
 /*--------------------------------------------------------------
 # Section: Ngakoue
 --------------------------------------------------------------*/
-.ngakoue { background: -webkit-linear-gradient(left, black 0%, black 50%, #F83A39 50%, #F83A39 100%); background: linear-gradient(to right, black 0%, black 50%, #F83A39 50%, #F83A39 100%); }
-
 /*--------------------------------------------------------------
 # Section: Day
 --------------------------------------------------------------*/
-.day { background: -webkit-linear-gradient(left, #00122B 0%, #00122B 50%, #bf9565 50%, #bf9565 100%); background: linear-gradient(to right, #00122B 0%, #00122B 50%, #bf9565 50%, #bf9565 100%); }
-
 /*--------------------------------------------------------------
 # Section: Holmes
 --------------------------------------------------------------*/
-.holmes { background: -webkit-linear-gradient(left, #784f72 0%, #784f72 50%, black 50%, black 100%); background: linear-gradient(to right, #784f72 0%, #784f72 50%, black 50%, black 100%); }
-
 /*--------------------------------------------------------------
 # Section: Allen
 --------------------------------------------------------------*/
-.allen { background: -webkit-linear-gradient(left, #231F20 0%, #231F20 50%, #561d22 50%, #561d22 100%); background: linear-gradient(to right, #231F20 0%, #231F20 50%, #561d22 50%, #561d22 100%); }
-
 /*--------------------------------------------------------------
 # Section: Woodard
 --------------------------------------------------------------*/
-.woodard { background: -webkit-linear-gradient(left, #5954d9 0%, #5954d9 50%, #939BA1 50%, #939BA1 100%); background: linear-gradient(to right, #5954d9 0%, #5954d9 50%, #939BA1 50%, #939BA1 100%); }
-
 /*--------------------------------------------------------------
 # Section: Credits
 --------------------------------------------------------------*/
